Update tsconfig to include tsBuildInfoFile

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,8 +3,10 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
+
