--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "build:webapp1": "turbo run build --filter=@monorepo/webapp1",
+    "build:webapp2": "turbo run build --filter=@monorepo/webapp2",
+    "build:api": "turbo run build --filter=@monorepo/api",
+    "build:python-api": "cd apps/python-api && python -m compileall .",
+    "build:queue-worker": "turbo run build --filter=@monorepo/queue-worker",
+    "build:shared": "turbo run build --filter=@monorepo/shared",
+    "build:ui": "turbo run build --filter=@monorepo/ui",
     "dev": "concurrently \"npm run dev:webapp1\" \"npm run dev:webapp2\" \"npm run dev:api\" \"npm run dev:queue\" \"npm run dev:shared\" \"npm run dev:ui\"",
     "dev:webapp1": "turbo run dev --filter=@monorepo/webapp1",
     "dev:webapp2": "turbo run dev --filter=@monorepo/webapp2",
@@ -31,3 +38,4 @@
     "packages/*"
   ]
 }
+
