--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,12 +1,8 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@monorepo/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "jsx": "react-jsx",
-    "tsBuildInfoFile": "./dist/.tsbuildinfo"
+    "outDir": "dist"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"],
+  "exclude": ["dist", "build", "node_modules"]
 }
-
