--- a/apps/webapp1/tsconfig.json
+++ b/apps/webapp1/tsconfig.json
@@ -1,21 +1,13 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@monorepo/typescript-config/nextjs.json",
   "compilerOptions": {
+    "outDir": "dist",
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "allowJs": true,
-    "esModuleInterop": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "tsBuildInfoFile": "./.next/cache/tsbuildinfo",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "noEmit": true
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["src", "next-env.d.ts", "next.config.js", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
