--- a/apps/webapp2/tsconfig.json
+++ b/apps/webapp2/tsconfig.json
@@ -1,21 +1,18 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@monorepo/typescript-config/nextjs.json",
   "compilerOptions": {
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "allowJs": true,
-    "esModuleInterop": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "tsBuildInfoFile": "./.next/cache/tsbuildinfo",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "noEmit": true
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "next.config.js",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
