--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,22 +1,18 @@
 {
   "name": "@monorepo/shared",
   "version": "1.0.0",
-  "private": true,
-  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
+  "sideEffects": false,
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "clean": "rm -rf dist",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
+    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
+    "lint": "eslint \"src/**/*.ts*\"",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "generate": "drizzle-kit generate:pg",
     "migrate": "ts-node src/db/migrate.ts"
   },
@@ -34,6 +30,8 @@
     "typescript": "^5.2.2",
     "drizzle-kit": "^0.19.13",
     "tsup": "^7.2.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
-
