--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@monorepo/shared": "*",
+    "@monorepo/database": "*",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "bullmq": "^4.12.0",
@@ -27,4 +28,3 @@
     "typescript": "^5.2.2"
   }
 }
-
