--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo/shared",
+  "name": "@monorepo/database",
   "version": "1.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -12,21 +12,22 @@
     "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
     "lint": "eslint \"src/**/*.ts*\"",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "generate": "drizzle-kit generate:pg",
+    "migrate": "ts-node src/migrate.ts"
   },
   "dependencies": {
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3"
+    "drizzle-orm": "^0.28.6",
+    "postgres": "^3.3.5",
+    "@neondatabase/serverless": "^0.6.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/bcryptjs": "^2.4.4",
     "typescript": "^5.2.2",
-    "tsup": "^7.2.0"
+    "drizzle-kit": "^0.19.13",
+    "tsup": "^7.2.0",
+    "@monorepo/typescript-config": "*"
   },
   "publishConfig": {
     "access": "public"
   }
 }
-
