--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,2 +1,6 @@
 PORT=4000
 CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+JWT_SECRET=your-secret-key
+JWT_REFRESH_SECRET=your-refresh-secret-key
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/development
+REDIS_URL=redis://localhost:6379
